--- a/homework6/requirements.txt
+++ b/homework6/requirements.txt
@@ -1,2 +1,117 @@
-app==0.0.1
+alembic==1.8.1
+altair==5.2.0
+astroid==2.12.9
+asttokens==2.2.1
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+blinker==1.7.0
+Bootstrap-Flask==2.2.0
+cachetools==5.3.3
+certifi==2022.12.7
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+comm==0.1.2
+coverage==7.4.1
+debugpy==1.6.6
+decorator==5.1.1
+dill==0.3.5.1
+docker==6.0.1
+EasyProcess==1.1
+entrypoint2==1.1
+exceptiongroup==1.0.4
+executing==1.2.0
+Faker==15.3.2
+Flask==2.2.2
+Flask-Migrate==4.0.0
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+gitdb==4.0.11
+GitPython==3.1.42
+google==3.0.0
+greenlet==2.0.1
+gunicorn==20.1.0
+idna==3.4
+importlib-metadata==5.1.0
+iniconfig==1.1.1
+ipykernel==6.21.2
+ipython==8.10.0
+isort==5.10.1
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+lazy-object-proxy==1.7.1
+Mako==1.2.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdurl==0.1.2
+MouseInfo==0.1.3
+mss==9.0.1
+nest-asyncio==1.5.6
+numpy==1.23.4
+packaging==21.3
+pandas==1.4.3
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.0.1
+platformdirs==2.5.2
+pluggy==1.0.0
+prompt-toolkit==3.0.37
+protobuf==4.25.3
+psutil==5.9.4
+pure-eval==0.2.2
+py==1.11.0
+pyarrow==15.0.1
+PyAutoGUI==0.9.54
+pydeck==0.8.1b0
+PyGetWindow==0.0.9
+Pygments==2.14.0
+pylint==2.15.2
+PyMsgBox==1.0.9
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
+pytest==7.2.0
+pytest-cov==4.1.0
+pytest-pylint==0.19.0
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+pytweening==1.0.7
+pytz==2022.6
+pywin32==305
+pyzmq==25.0.0
+referencing==0.33.0
+requests==2.28.1
+rich==13.7.1
+rpds-py==0.18.0
+six==1.16.0
+smmap==5.0.1
+soupsieve==2.5
+SQLAlchemy==1.4.44
+stack-data==0.6.2
+streamlit==1.32.0
+tenacity==8.2.3
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.4
+toolz==0.12.1
+tornado==6.2
+traitlets==5.9.0
+typing_extensions==4.3.0
+urllib3==1.26.13
+watchdog==4.0.0
+wcwidth==0.2.6
+websocket-client==1.4.2
+Werkzeug==2.2.2
+wrapt==1.14.1
+WTForms==3.0.1
+zipp==3.11.0
